samples/_failures_safe/1761457202_abd0f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52f75822.c: In function ‘main’:
./samples/SAFE/__tmp_52f75822.c:155:17: error: expected expression at end of input
  155 |                 } else if (status ==
      |                 ^
./samples/SAFE/__tmp_52f75822.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52f75822.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52f75822.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52f75822.c:155:17: error: expected declaration or statement at end of input
